--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-progress": "^1.1.0",
@@ -24,6 +25,7 @@
     "firebase": "^10.14.1",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
+    "openai": "^4.68.0",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.13.0",
