--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "firebase": "^10.14.1",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
+    "next-themes": "^0.4.3",
     "openai": "^4.68.0",
     "react": "^18",
     "react-dom": "^18",
